--- a/src/pages/components/AudioListDrawer.module.less
+++ b/src/pages/components/AudioListDrawer.module.less
@@ -1,12 +1,12 @@
 .wrapper {
   height: 100vh;
-  background-color: #444;
-  --base-border-color: #666;
+  background-color: #111;
+  --base-border-color: #222;
   .titleWrapper {
     padding-top: 20px;
     padding-left: 20px;
-    font-size: 20px;
-    color: #aaa;
+    font-size: 16px;
+    color: #fff;
   }
   .listWrapper {
     border-top: 1px solid var(--base-border-color);
@@ -23,7 +23,7 @@
       color: #fff;
       --iscurrent-color: #d33;
       &:hover {
-        background-color: #555;
+        background-color: #222;
       }
       &.isCurrentPlaying {
         color: var(--iscurrent-color);
@@ -42,7 +42,7 @@
         border-bottom-color: transparent;
       }
       .audioName {
-        font-size: 14px;
+        font-size: 12px;
         width: 130px;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -56,6 +56,7 @@
         white-space: nowrap;
       }
       .duration {
+        text-align: center;
         font-size: 12px;
         width: 120px;
       }
