--- a/src/pages/components/PlayerBar.module.less
+++ b/src/pages/components/PlayerBar.module.less
@@ -16,6 +16,9 @@
     margin-left: 20px;
   }
   .controlsWrapper {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
     margin-top: 5px;
     width: 400px;
     .tools {
@@ -96,22 +99,31 @@
   }
   .leftExtraToolsWrapper {
     display: flex;
-    flex: 1;
     align-items: center;
     justify-content: flex-start;
     height: 70px;
+    max-width: calc(50% - 270px);
+    overflow: hidden;
     img {
       width: 70px;
       height: 70px;
     }
     .artistInfo {
-      margin-left: 20px;
+      margin-left: 10px;
       color: #ccc;
       font-size: 14px;
-
       .artistsWrapper {
-        font-size: 12px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
         margin-top: 6px;
+        .artist {
+          font-size: 12px;
+          white-space: nowrap;
+          .divider {
+            margin: 0 2px;
+          }
+        }
       }
     }
   }
@@ -131,40 +143,39 @@
 }
 
 .volumnWrapper {
-  width: 150px;
-  height: 20px;
+  width: 20px;
+  height: 120px;
   display: flex;
-  align-items: center;
+  justify-content: center;
+  position: relative;
   .volumnBar {
     position: relative;
-    width: 100%;
-    height: 5px;
+    width: 5px;
+    height: 100%;
     cursor: pointer;
     background-color: #ccc;
     border-radius: 2px;
     .volumnPercent {
       position: absolute;
-      top: 0;
-      left: 0;
-      // width: 50%;
-      height: 5px;
+      bottom: 0;
+      width: 5px;
       background-color: #888;
       border-radius: 2px;
     }
-    .volumnCurrent {
-      position: absolute;
-      top: -6px;
-      // left: 50%;
-      width: 4px;
-      height: 12px;
-      background-color: red;
-      border-radius: 3px;
-      transition: transform 0.3s ease-in-out;
-      padding: 3px 2px;
+  }
+  .volumnCurrent {
+    cursor: pointer;
+    position: absolute;
+    left: 2px;
+    height: 4px;
+    width: 12px;
+    background-color: red;
+    border-radius: 3px;
+    transition: transform 0.3s ease-in-out;
+    padding: 2px 3px;
 
-      &:hover {
-        transform: scale(1.3, 1.3);
-      }
+    &:hover {
+      transform: scale(1.3, 1.3);
     }
   }
 }
