--- a/src/pages/components/AudioDetails.module.less
+++ b/src/pages/components/AudioDetails.module.less
@@ -1,18 +1,19 @@
 .wrapper {
   width: 100%;
   height: 100%;
-  background-color: #000;
+  background-color: #333;
   overflow: auto;
   box-sizing: border-box;
-  padding-top: 50px;
   display: flex;
   justify-content: center;
   .AudioInfoWrapper {
-    width: 80%;
+    width: 90%;
     .audioAreaWrapper {
       display: flex;
+      height: calc(100vh - 70px);
+      align-items: center;
+      justify-content: center;
       .imgWrapper {
-        margin-top: 100px;
         img {
           width: 400px;
           height: 400px;
@@ -22,7 +23,36 @@
         }
       }
       .detailsWrapper {
+        max-width: 700px;
+        flex: 1;
+        margin-left: 50px;
         .lyricWrapper {
+          margin-top: -50px;
+          padding-top: 50px;
+          box-sizing: border-box;
+          overflow-x: hidden;
+          overflow-y: auto;
+          max-width: 700px;
+          // ff
+          scrollbar-width: none;
+          // webkit
+          &::-webkit-scrollbar {
+            width: 0;
+          }
+          .lyricLine {
+            cursor: pointer;
+            text-align: center;
+            height: 40px;
+            color: #ccc;
+            transition: transform 0.1s linear;
+            &:hover {
+              color: #eee;
+            }
+            &.isCurrent {
+              color: red;
+              transform: scale(1.5);
+            }
+          }
         }
       }
     }
