--- a/src/pages/components/AudioListDrawer.module.less
+++ b/src/pages/components/AudioListDrawer.module.less
@@ -3,10 +3,17 @@
   background-color: #111;
   --base-border-color: #222;
   .titleWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding-top: 20px;
     padding-left: 20px;
+    padding-right: 20px;
     font-size: 16px;
     color: #fff;
+    .cleanListButton {
+      cursor: pointer;
+    }
   }
   .listWrapper {
     border-top: 1px solid var(--base-border-color);
