feat: 添加持久化存储

--- a/src/pages/components/PlayerBar.module.less
+++ b/src/pages/components/PlayerBar.module.less
@@ -143,7 +143,7 @@
     flex: 1;
     justify-content: flex-end;
     align-items: center;
-    .volumn {
+    .volume {
       font-size: 20px;
     }
     .openList {
@@ -153,20 +153,20 @@
   }
 }
 
-.volumnWrapper {
+.volumeWrapper {
   width: 20px;
   height: 120px;
   display: flex;
   justify-content: center;
   position: relative;
-  .volumnBar {
+  .volumeBar {
     position: relative;
     width: 5px;
     height: 100%;
     cursor: pointer;
     background-color: #ccc;
     border-radius: 2px;
-    .volumnPercent {
+    .volumePercent {
       position: absolute;
       bottom: 0;
       width: 5px;
@@ -174,7 +174,7 @@
       border-radius: 2px;
     }
   }
-  .volumnCurrent {
+  .volumeCurrent {
     cursor: pointer;
     position: absolute;
     left: 2px;
